[FIX] l10n_cn: clean taxes name
closes odoo/odoo#42548

Signed-off-by: Josse Colpaert <jco@openerp.com>

--- a/addons/l10n_cn/i18n_extra/en_US.po
+++ b/addons/l10n_cn/i18n_extra/en_US.po
@@ -285,54 +285,54 @@ msgstr "R & D expenditure"
 #: model:account.tax.template,description:l10n_cn.l10n_cn_sales_excluded_9
 #: model:account.tax.template,description:l10n_cn.l10n_cn_sales_included_9
 msgid "税收9％"
-msgstr "Tax9%"
+msgstr "Tax 9%"
 
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_purchase_excluded_9
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_excluded_9
-msgid "税收9％ - 中国小企业会计科目表"
-msgstr "Tax 9% - chart of accounts of small enterprises in China"
+msgid "税收9％"
+msgstr "Tax 9%"
 
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_included_9
-msgid "税收9％（含） - 中国小企业会计科目表"
-msgstr "Tax 9% (inclusive) - chart of accounts for small enterprises in China"
+msgid "税收9％（含)"
+msgstr "Tax 9% (inclusive)"
 
 #. module: l10n_cn
 #: model:account.tax.template,description:l10n_cn.l10n_cn_purchase_excluded_13
 #: model:account.tax.template,description:l10n_cn.l10n_cn_sales_excluded_13
 #: model:account.tax.template,description:l10n_cn.l10n_cn_sales_included_13
 msgid "税收13％"
-msgstr "Tax13%"
+msgstr "Tax 13%"
 
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_purchase_excluded_13
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_excluded_13
-msgid "税收13％ - 中国小企业会计科目表"
-msgstr "Tax 13% - chart of accounts of small enterprises in China"
+msgid "税收13％"
+msgstr "Tax 13%"
 
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_included_13
-msgid "税收13％（含） - 中国小企业会计科目表"
-msgstr "Tax 13% (inclusive) - chart of accounts for small enterprises in China"
+msgid "税收13％（含)"
+msgstr "Tax 13% (inclusive)"
 
 #. module: l10n_cn
 #: model:account.tax.template,description:l10n_cn.l10n_cn_purchase_excluded_6
 #: model:account.tax.template,description:l10n_cn.l10n_cn_sales_excluded_6
 #: model:account.tax.template,description:l10n_cn.l10n_cn_sales_included_6
 msgid "税收6％"
-msgstr "Tax6%"
+msgstr "Tax 6%"
 
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_purchase_excluded_6
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_excluded_6
-msgid "税收6％ - 中国小企业会计科目表"
-msgstr "Tax 6% - chart of accounts for small enterprises in China"
+msgid "税收6％"
+msgstr "Tax 6%"
 
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_included_6
-msgid "税收6％（含） - 中国小企业会计科目表"
-msgstr "Tax 6% (inclusive) - chart of accounts for small enterprises in China"
+msgid "税收6％（含)"
+msgstr "Tax 6% (inclusive)"
 
 #. module: l10n_cn
 #: model:account.account.template,name:l10n_cn.l10n_cn_5602
