--- a/addons/l10n_cn/i18n_extra/l10n_cn.pot
+++ b/addons/l10n_cn/i18n_extra/l10n_cn.pot
@@ -290,12 +290,12 @@ msgstr ""
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_purchase_excluded_9
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_excluded_9
-msgid "税收9％ - 中国小企业会计科目表"
+msgid "税收9％"
 msgstr ""
 
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_included_9
-msgid "税收9％（含） - 中国小企业会计科目表"
+msgid "税收9％（含)"
 msgstr ""
 
 #. module: l10n_cn
@@ -308,12 +308,12 @@ msgstr ""
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_purchase_excluded_13
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_excluded_13
-msgid "税收13％ - 中国小企业会计科目表"
+msgid "税收13％"
 msgstr ""
 
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_included_13
-msgid "税收13％（含） - 中国小企业会计科目表"
+msgid "税收13％（含)"
 msgstr ""
 
 #. module: l10n_cn
@@ -326,12 +326,12 @@ msgstr ""
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_purchase_excluded_6
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_excluded_6
-msgid "税收6％ - 中国小企业会计科目表"
+msgid "税收6％"
 msgstr ""
 
 #. module: l10n_cn
 #: model:account.tax.template,name:l10n_cn.l10n_cn_sales_included_6
-msgid "税收6％（含） - 中国小企业会计科目表"
+msgid "税收6％（含)"
 msgstr ""
 
 #. module: l10n_cn
